@@ -479,8 +479,9 @@ static GnomeUIInfo settings_menu[] = {
 };
 
 static GnomeUIInfo help_menu[] = {
-  GNOMEUIINFO_MENU_ABOUT_ITEM(about_window, NULL),
-  GNOMEUIINFO_END
+	GNOMEUIINFO_HELP("gnome-mud"),
+	GNOMEUIINFO_MENU_ABOUT_ITEM(about_window, NULL),
+	GNOMEUIINFO_END
 };
 
 GnomeUIInfo main_menu[] = {
